--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@types/three": "^0.180.0",
+    "chess.js": "^1.3.1",
+    "chessboardjs": "^0.0.1",
     "pinia": "^3.0.3",
     "three": "^0.180.0",
     "vue": "^3.5.18",
